[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/game_over_ui.gd" id="1"]

[node name="GameOverUI" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LeaderboardLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LEADERBOARD"
horizontal_alignment = 1

[node name="LeaderboardContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="LeaderboardList" type="VBoxContainer" parent="VBoxContainer/LeaderboardContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
